# autotools

./: .gitignore  Makefile.am  README.md  configure.ac  libboring.pc.in
src/: Makefile.am  basic.cpp  boring.cpp  boring.h
